adding a few basic layout and theme features.

--- a/client/main.html
+++ b/client/main.html
@@ -1,14 +1,30 @@
 <head>
-  <title>slangtionary_app</title>
+  <title>Slangtionary</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-  {{> info}}
+  <header class="wideBar btmBorder">
+    <div>
+      <h1 class="center">Slangtionary</h1>
+      <ul>
+        <li><a href="#">Browse</a></li>
+        <li><a href="#">Language</a></li>
+        <li><a href="#">Currency</a></li>
+      </ul>
+    </div>
+  </header>
+  <div class="mainContent">
+    <h2>Welcome to Slangtionary!</h2>
+    <p> This project is currently under development. More information will be avilable soon</p>
+    <!--{{> hello}}
+    {{> info}}-->
+  </div>
+  <footer class="topBorder">
+    <p>Developed through <a href="https://github.com/marhalish/slangtionary">GitHub</a> & <a href="https://utopian.io/project/marhalish/slangtionary/github/116466707/all">Utopian.io</a></p>
+    <span><a href="https://busy.org/@slangtionary">Busy.org</a></span>
+  </footer>
 </body>
-
+<!--
 <template name="hello">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
@@ -23,3 +39,4 @@
     <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
   </ul>
 </template>
+-->
