Fixing layout and routing issues for Slangtionary application structure.

--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,3 @@
 <head>
-  <title>Slangtionary</title>
+  <title>Slangtionary - The dictionary that pays</title>
 </head>
-<!--<script src="//cdn.steemjs.com/lib/latest/steem.min.js"></script>-->
