Updated file structure.

--- a/imports/client/about/about.html
+++ b/imports/client/about/about.html
@@ -5,7 +5,10 @@
 
 </body>
 
-<template name ="about">
+<template name="about">
   <h2> About Slangtionary </h2>
   <p> Slangtionary info </p>
+</template>
+
+<template name="notFound">
 </template>
