--- a/imports/client/contact/contact.html
+++ b/imports/client/contact/contact.html
@@ -5,7 +5,10 @@
 
 </body>
 
-<template name ="contact_slangtionary">
+<template name="contact_slangtionary">
   <h2> Contact Slangtionary </h2>
   <p> Slangtionary info </p>
+</template>
+
+<template name="notFound">
 </template>
