--- a/imports/client/home/home.html
+++ b/imports/client/home/home.html
@@ -1,4 +1,13 @@
+<body>
+
+  {{> home }}
+
+</body>
+
 <template name="home">
-  <h1>Home page</h1>
-  <p>home page is here.</p>
+  <h1> Home pageee </h1>
+  <p> home page is here. </p>
+</template>
+
+<template name="notFound">
 </template>
