--- a/imports/client/misc/notFound.html
+++ b/imports/client/misc/notFound.html
@@ -3,6 +3,6 @@
 </body>
 
 <template name="notFound">
-  <h1> Page Not Found : / </h1>
+  <h1> Page Not Found : /// </h1>
   <p> This page seems to be on hiatus. </p>
 </template>
